amelioration responsivité jusqu'à 993px

--- a/booki.html
+++ b/booki.html
@@ -203,9 +203,9 @@
                                             <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="un interieur d'habitation"/>                                   
                                         </div>
                                         <div class="vignettes_infos">
-                                            <h3 class="haut">Hotel Tout bleu et tout blanc</h3>
-                                            <p class="haut">Nuit à partir de <strong>68€</strong></p>
-                                            <div class="etoiles bas">
+                                            <h3>Hotel Tout bleu et tout blanc</h3>
+                                            <p>Nuit à partir de <strong>68€</strong></p>
+                                            <div class="etoiles">
                                                 <i class="fas fa-star"></i>
                                                 <i class="fas fa-star"></i>
                                                 <i class="fas fa-star"></i>
@@ -223,9 +223,9 @@
                                             <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="un interieur d'habitation"/>                                    
                                         </div>
                                         <div class="vignettes_infos">
-                                            <h3 class="haut">Hotel Le soleil du matin</h3>
-                                            <p class="haut">Nuit à partir de <strong>128€</strong></p>
-                                            <div class="etoiles bas">
+                                            <h3>Hotel Le soleil du matin</h3>
+                                            <p>Nuit à partir de <strong>128€</strong></p>
+                                            <div class="etoiles">
                                                 <i class="fas fa-star"></i>
                                                 <i class="fas fa-star"></i>
                                                 <i class="fas fa-star"></i>
@@ -243,9 +243,9 @@
                                             <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="un interieur d'habitation"/>                                    
                                         </div>
                                         <div class="vignettes_infos">
-                                            <h3 class="haut">Au coeur de l'eau chambres d'hotes</h3>
-                                            <p class="haut">Nuit à partir de <strong>71€</strong></p>
-                                            <div class="etoiles bas">
+                                            <h3>Au coeur de l'eau chambres d'hotes</h3>
+                                            <p>Nuit à partir de <strong>71€</strong></p>
+                                            <div class="etoiles">
                                                 <i class="fas fa-star"></i>
                                                 <i class="fas fa-star"></i>
                                                 <i class="fas fa-star"></i>
@@ -261,7 +261,7 @@
                 </section>
 
                 <section id="section_activites">
-                    <h2 class="sous_titres">Activités à Marseille</h2>
+                    <h2 class="sous_titre">Activités à Marseille</h2>
                     <div id="activites">
                         <div class="vignette_decoupage grande">                            
                             <div class="vignettes_activites">
