correction probleme mobile et ameliorations maquette

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hébergements sur</title>
     <script src="https://kit.fontawesome.com/dc6fd1c2b4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css"/>
@@ -131,7 +132,7 @@
                                 <a href="#">
                                     
                                         <div class="vignettes_image">
-                                            <img src="images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="un interieur d'habitation"/>
+                                            <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="un interieur d'habitation"/>
                                         </div>
                                         <div class="vignettes_infos">
                                             <h3>Hotel de la mer</h3>
