modifs bouton du formulaire

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                 <form method="post" action="formulaire.php" class="formulaire">                    
                     <label for="recherche"><i class="fas fa-map-marker-alt"></i></label>
                     <div id="champs"><input type="search" name="recherche" placeholder="Marseille, France" /></div>
-                    <button id="bouton"><div id="rechercher">Rechercher</div><i class="fas fa-search"></i></button>                    
+                    <button id="bouton">Rechercher</button>
+                    <button id="bouton_2"><i class="fas fa-search"></i></button>                    
                 </form>
                 <div id="filtre">
                     <h3>Filtres</h3>
