--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trouvez votre hébergement avec Booki</title>
     <script src="https://kit.fontawesome.com/dc6fd1c2b4.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="styles/style.css"/>
     
 </head>
 <body>
