chamngement for= label conformité w3c

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <p>En plein centre ville ou en pleine nature</p>
                 </div>
                 <form method="post" action="formulaire.php" class="formulaire">                    
-                    <label for="recherche"><i class="fas fa-map-marker-alt"></i></label>
+                    <label for="recherche_form"><i class="fas fa-map-marker-alt"></i></label>
                     <div id="champs"><input type="search" name="recherche" placeholder="Marseille, France" /></div>
                     <button id="bouton">Rechercher</button>
                     <button id="bouton_2"><i class="fas fa-search"></i></button>                    
