--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
                 <form method="post" action="formulaire.php" class="formulaire">                    
                     <label for="recherche_form"><i class="fas fa-map-marker-alt"></i></label>
-                    <div id="champs"><input type="search" name="recherche" placeholder="Marseille, France" /></div>
+                    <div id="champs"><input type="search" name="recherche" placeholder="Marseille, France" id="recherche_form" /></div>
                     <button id="bouton">Rechercher</button>
                     <button id="bouton_2"><i class="fas fa-search"></i></button>                    
                 </form>
